# Pilandok

./: .gitignore  CMakeLists.txt  README.md  main.qml
inc/cryptopp/: config_os.h
inc/kijangProtocol/: KijangProtocol_global.h  kijangprotocol.h
src/: kijangclient.cpp  kijangclient.h  main.cpp
src/application/: pilandok.cpp  pilandok.h  pilandoklogger.cpp  pilandoklogger.h  pilanduk.cpp  pilanduk.h  pilanduklogger.cpp  pilanduklogger.h
src/input/: kijangmotioninput.cpp  kijangmotioninput.h
src/network/: kijangclient.cpp  kijangclient.h  kijangclientcontroller.cpp  kijangclientcontroller.h  kijangclientmodule.cpp  kijangclientmodule.h  kijangmainmodule.cpp  kijangmainmodule.h  kijangprotocol.cpp  kijangprotocol.h  kijangreadclient.cpp  kijangreadclient.h  kijangservercontrolmodule.cpp  kijangservercontrolmodule.h  kijangwriteclient.cpp  kijangwriteclient.h
src/output/: pilandokaudiooutput.cpp  pilandokaudiooutput.h  pilandokoutputmanager.cpp  pilandokoutputmanager.h  pilandokvideooutput.cpp  pilandokvideooutput.h  pilandukaudiooutput.cpp  pilandukaudiooutput.h  pilandukoutputmanager.cpp  pilandukoutputmanager.h  pilandukvideooutput.cpp  pilandukvideooutput.h
